--- a/index.html
+++ b/index.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-MMJY5KZ64J"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-MMJY5KZ64J');
-</script>
   <head>
 
     <meta charset="UTF-8">
@@ -33,7 +25,15 @@
 <!--
 
 
--->
+--><!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MMJY5KZ64J"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MMJY5KZ64J');
+</script>
   </head>
 
 <body>
